# joyous-rebellion-local

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build-web-ui.sh
crates/jr-auth/: Cargo.toml
crates/jr-auth/src/: claims.rs  lib.rs  middleware.rs  rate_limit.rs  revocation.rs  user_context.rs  validation.rs
crates/jr-patterns/: Cargo.toml
crates/jr-patterns/src/: anti_patterns.rs  errors.rs  lib.rs  newtypes.rs  roles.rs  security.rs  test_helpers.rs
crates/jr-relay/: Cargo.toml
crates/jr-relay/src/: campaign_hub.rs  envelope.rs  lib.rs  session.rs
crates/jr-storage/: Cargo.toml
crates/jr-storage/src/: audit_log.rs  blob_store.rs  campaign_store.rs  config.rs  error.rs  lib.rs
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  main.rs  qr.rs  server.rs  shred.rs
