[package]
name = "jr-local"
version = "0.3.3"
edition = "2021"
license = "AGPL-3.0-or-later"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
rand = "0.8"

jr-patterns = { path = "../crates/jr-patterns" }
jr-auth = { path = "../crates/jr-auth" }
jr-storage = { path = "../crates/jr-storage" }
jr-relay = { path = "../crates/jr-relay" }

[build-dependencies]
tauri-build = { version = "2", features = [] }
