[package]
name = "jr-auth"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "JWT validation, RBAC enforcement, and rate limiting for the Joyous Rebellion sync server"

[dependencies]
jr-patterns = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = "9"
governor = "0.8"
tokio = { workspace = true }
axum = { workspace = true }
http = "1"
serde_urlencoded = "0.7"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
p256 = { version = "0.13", features = ["jwk", "pem"] }
rand_core = "0.6"
axum = { workspace = true }
tower = { workspace = true }
hyper = "1"
