[package]
name = "jr-relay"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "WebSocket relay subsystem: peer registry, session lifecycle, and wire protocol for the Joyous Rebellion sync server"

[dependencies]
jr-patterns = { workspace = true }
jr-auth = { workspace = true }
jr-storage = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
dashmap = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
